--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@sveltejs/adapter-netlify": "^5.2.4",
     "@sveltejs/adapter-vercel": "^5.6.1",
     "@sveltejs/kit": "2.17.1",
     "@sveltejs/vite-plugin-svelte": "5.0.3",
